# Result-Analysis

./: README.md  build.bat  datadump.json  datadump_utf8.json  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  whole.json
.circleci/: config.yml
ResultTracker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
base/: admin.py  forms.py  models.py  scraper.py  tasks.py  urls.py  views.py
base/management/commands/: scrape_ranking.py
base/migrations/: 0001_initial.py  0002_alter_player_wins.py  0003_alter_player_wins.py  0004_player_game_played_alter_player_wins.py  0005_alter_score3set_lset3_alter_score3set_tb1_and_more.py  0006_alter_doublesmatch_score_alter_singlesmatch_score.py  0007_alter_doublesmatch_score_alter_singlesmatch_score.py  0008_alter_doublesmatch_score_alter_singlesmatch_score.py  0009_alter_doublesmatch_score_alter_singlesmatch_score.py  0010_alter_doublesmatch_score_alter_singlesmatch_score.py  0011_alter_doublesmatch_score_alter_singlesmatch_score.py  0012_alter_doublesmatch_score_alter_singlesmatch_score.py  0013_doublesmatch_versus_duel_day_singlesmatch_versus.py  0014_doublesmatch_day_singlesmatch_day.py  0015_remove_doublesmatch_versus_and_more.py  0016_alter_duel_options.py  0017_alter_duel_options.py  0018_ranking.py  0019_player_data_player_url.py  0020_alter_player_data.py  0021_alter_player_data.py  0022_player_utrurl.py
base/templates/base/: duel_form.html  home.html  login_register.html  logistic.html  match_form.html  navbar.html  players.html  profile.html  teamstats.html
circleci/: config.yml
static/styles/: main.css
templates/: main.html
