[tool.poetry]
name = "resulttracker"
version = "0.1.0"
description = ""
authors = ["Shrish Choudhary <emailshrish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
amqp = "5.2.0"
arabic-reshaper = "3.0.0"
asgiref = "3.7.2"
asn1crypto = "1.5.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
beautifulsoup4 = "4.12.2"
billiard = "4.2.0"
celery = "5.3.6"
certifi = "2023.11.17"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
contourpy = "1.2.0"
cryptography = "41.0.7"
cssselect2 = "0.7.0"
cycler = "0.12.1"
django = "4.2.9"
exceptiongroup = "1.2.0"
filelock = "3.13.1"
fonttools = "4.47.2"
freetype-py = "2.3.0"
fsspec = "2023.12.2"
h11 = "0.14.0"
html5lib = "1.1"
idna = "3.6"
importlib-resources = "6.1.1"
jinja2 = "3.1.3"
kiwisolver = "1.4.5"
kombu = "5.3.5"
lxml = "5.1.0"
markupsafe = "2.1.3"
matplotlib = "3.8.2"
mpmath = "1.3.0"
ninja = "1.11.1.1"
numpy = "1.26.3"
opencv-python = "4.9.0.80"
oscrypto = "1.3.0"
outcome = "1.3.0.post0"
packaging = "23.2"
pillow = "10.2.0"
prompt-toolkit = "3.0.43"
psycopg2 = "2.9.9"
psycopg2-binary = "2.9.9"
pyclipper = "1.3.0.post5"
pycparser = "2.21"
pyhanko = "0.21.0"
pyhanko-certvalidator = "0.26.3"
pyparsing = "3.1.1"
pypdf = "3.17.4"
pypng = "0.20220715.0"
pysocks = "1.7.1"
pytesseract = "0.3.10"
python-bidi = "0.4.2"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
qrcode = "7.4.2"
redis = "5.0.1"
reportlab = "4.0.9"
requests = "2.31.0"
selenium = "4.9.1"
shapely = "2.0.2"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
sqlparse = "0.4.4"
svglib = "1.5.1"
sympy = "1.12"
tinycss2 = "1.2.1"
torch = "2.1.2"
trio = "0.24.0"
trio-websocket = "0.11.1"
typing-extensions = "4.9.0"
tzdata = "2023.4"
tzlocal = "5.2"
uritools = "4.0.2"
urllib3 = "2.1.0"
vine = "5.1.0"
wcwidth = "0.2.13"
webdriver-manager = "4.0.1"
webencodings = "0.5.1"
wsproto = "1.2.0"
xhtml2pdf = "0.2.13"
zipp = "3.17.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
